--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	-->
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../src/css/fa/css/font-awesome.min.css">
 	<!--
 	  Notice the use of %PUBLIC_URL% in the tags above.
@@ -28,6 +28,7 @@
 		You need to enable JavaScript to run this app.
 	</noscript>
 	<div id="root"></div>
+	<div id="sub_root"></div>
 	<!--
 	  This HTML file is a template.
 	  If you open it directly in the browser, you will see an empty page.
